force-app/main/default/objects/DHA_Management_Setting__c/DHA_Management_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configurations for DHA Student Management App</description>
    <label>DHA Management Setting</label>
</CustomObject>