force-app/main/default/objects/DHA_Management_Setting__c/fields/Max_Assigned_Classes__c.field-meta.xml
<CustomField>
    <fullName>Max_Assigned_Classes__c</fullName>
    <label>Max Assigned Classes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>