force-app/main/default/objects/DHA_Management_Setting__c/fields/Minimum_Student_Age__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Student_Age__c</fullName>
    <label>Minimum Student Age</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>