force-app/main/default/objects/DHA_Management_Setting__c/fields/Pass_Score__c.field-meta.xml
<CustomField>
    <fullName>Pass_Score__c</fullName>
    <label>Pass Score</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>